@@ -1,0 +1,3 @@
+!<INSTANCE CLASSNAME="SFCB_RegisteredProfile">
+<IMETHODRESPONSE NAME="OpenEnumerateInstances">
+!<ERROR CODE=
