@@ -1,0 +1,26 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<CIM CIMVERSION="2.0" DTDVERSION="2.0">
+<MESSAGE ID="4711" PROTOCOLVERSION="1.0">
+<SIMPLEREQ>
+<IMETHODCALL NAME="OpenEnumerateInstances">
+<LOCALNAMESPACEPATH>
+    <NAMESPACE NAME="root"></NAMESPACE>
+    <NAMESPACE NAME="interop"></NAMESPACE>
+</LOCALNAMESPACEPATH>
+<IPARAMVALUE NAME="ClassName">
+    <CLASSNAME NAME="SFCB_RegisteredProfile"/>
+</IPARAMVALUE>
+<IPARAMVALUE NAME="DeepInheritance">
+    <VALUE>TRUE</VALUE>
+</IPARAMVALUE>
+<IPARAMVALUE NAME="IncludeClassOrigin">
+    <VALUE>TRUE</VALUE>
+</IPARAMVALUE>
+<IPARAMVALUE NAME="MaxObjectCount">
+    <VALUE>0</VALUE>
+</IPARAMVALUE>
+</IMETHODCALL>
+</SIMPLEREQ>
+</MESSAGE>
+</CIM>
+
