@@ -1,0 +1,3 @@
+#!/bin/sh
+# The function in this test isn't implemented yet
+exit 2
